--- a/index.html
+++ b/index.html
@@ -1,235 +1,219 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Тест на пам'ять</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #1a1a2e, #16213e);
-      color: white;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-    }
-
-    #game-container { margin-top: 10vh; }
-
-    h1 {
-      font-size: 2em;
-      color: #00c6ff;
-      margin-bottom: 0.5em;
-    }
-
-    #display {
-      font-size: 4em;
-      height: 1.5em;
-      margin: 20px;
-      transition: opacity 0.2s ease-in-out;
-    }
-
-    .blink { animation: blink 0.3s ease-in-out; }
-
-    @keyframes blink {
-      0% { opacity: 0; transform: scale(0.8); }
-      50% { opacity: 1; transform: scale(1.2); }
-      100% { opacity: 1; transform: scale(1); }
-    }
-
-    input, button {
-      padding: 10px 20px;
-      font-size: 1em;
-      border-radius: 8px;
-      border: none;
-      margin: 10px;
-    }
-
-    button {
-      background-color: #00c6ff;
-      color: white;
-      cursor: pointer;
-    }
-
-    button:hover { background-color: #007acc; }
-
-    #status {
-      font-size: 1.3em;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-
-    #instruction { color: #cccccc; font-size: 1.1em; }
-
-    @media (max-width: 600px) {
-      h1 { font-size: 1.5em; }
-      #display { font-size: 2.5em; }
-    }
-  </style>
-</head>
-<body>
-  <div id="game-container">
-    <h1>Тест на пам'ять</h1>
-    <p id="instruction">Введи цифри у зворотному порядку</p>
-    <p id="display"></p>
-
-    <div id="name-container">
-      <input type="text" id="name" placeholder="Введи своє ім'я">
-      <br>
-      <button id="startBtn">Почати</button>
-    </div>
-
-    <div id="game-controls" style="display:none;">
-      <input type="text" id="answer" placeholder="Введи відповідь">
-      <button id="submitBtn">Відповісти</button>
-    </div>
-
-    <p id="status"></p>
-  </div>
-
-  <script>
-    const display = document.getElementById('display');
-    const answerInput = document.getElementById('answer');
-    const submitBtn = document.getElementById('submitBtn');
-    const startBtn = document.getElementById('startBtn');
-    const status = document.getElementById('status');
-    const nameInput = document.getElementById('name');
-    const nameContainer = document.getElementById('name-container');
-    const gameControls = document.getElementById('game-controls');
-
-    // URL твого Web App
-    const scriptURL = "https://script.google.com/macros/s/AKfycbzaQ_wDTro6L8ymZi6vqly0mC0ZOCpMxb4EJM9tSrgVzWMuGcnBvGehWRH5cbJHQbKW/exec";
-
-    let sequence = [];
-    let reversed = "";
-    let currentLevel = 1;
-    let attempt = 1;
-    let correctCount = 0;
-
-    const maxLevels = 5;
-    const attemptsPerLevel = 3;
-    const totalAttempts = maxLevels * attemptsPerLevel;
-
-    async function showSequence() {
-      if (currentLevel > maxLevels) {
-        endGame();
-        return;
+  <head>
+    <base target="_top">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Тест на пам'ять</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: linear-gradient(135deg, #1a1a2e, #16213e);
+        color: white;
+        text-align: center;
+        margin: 0;
+        padding: 0;
       }
 
-      display.textContent = "";
-      answerInput.disabled = true;
-      submitBtn.disabled = true;
-      status.textContent = "";
+      #game-container { margin-top: 10vh; }
 
-      sequence = Array.from(
-        { length: 2 + currentLevel },
-        () => Math.floor(Math.random() * 10)
-      );
-      reversed = sequence.slice().reverse().join("");
+      h1 {
+        font-size: 2em;
+        color: #00c6ff;
+        margin-bottom: 0.5em;
+      }
 
-      for (let num of sequence) {
-        display.classList.remove("blink");
-        await new Promise(res => setTimeout(res, 400));
-        display.textContent = num;
-        display.classList.add("blink");
-        await new Promise(res => setTimeout(res, 800));
+      #display {
+        font-size: 4em;
+        height: 1.5em;
+        margin: 20px;
+        transition: opacity 0.2s ease-in-out;
+      }
+
+      .blink { animation: blink 0.3s ease-in-out; }
+
+      @keyframes blink {
+        0% { opacity: 0; transform: scale(0.8); }
+        50% { opacity: 1; transform: scale(1.2); }
+        100% { opacity: 1; transform: scale(1); }
+      }
+
+      input, button {
+        padding: 10px 20px;
+        font-size: 1em;
+        border-radius: 8px;
+        border: none;
+        margin: 10px;
+      }
+
+      button {
+        background-color: #00c6ff;
+        color: white;
+        cursor: pointer;
+      }
+
+      button:hover { background-color: #007acc; }
+
+      #status {
+        font-size: 1.3em;
+        margin-top: 10px;
+        font-weight: bold;
+      }
+
+      #instruction { color: #cccccc; font-size: 1.1em; }
+
+      @media (max-width: 600px) {
+        h1 { font-size: 1.5em; }
+        #display { font-size: 2.5em; }
+      }
+    </style>
+  </head>
+  <body>
+    <div id="game-container">
+      <h1>Тест на пам'ять</h1>
+      <p id="instruction">Введи цифри у зворотному порядку</p>
+      <p id="display"></p>
+
+      <div id="name-container">
+        <input type="text" id="name" placeholder="Введи своє ім'я">
+        <br>
+        <button id="startBtn">Почати</button>
+      </div>
+
+      <div id="game-controls" style="display:none;">
+        <input type="text" id="answer" placeholder="Введи відповідь">
+        <button id="submitBtn">Відповісти</button>
+      </div>
+
+      <p id="status"></p>
+    </div>
+
+    <script>
+      const display = document.getElementById('display');
+      const answerInput = document.getElementById('answer');
+      const submitBtn = document.getElementById('submitBtn');
+      const startBtn = document.getElementById('startBtn');
+      const status = document.getElementById('status');
+      const nameInput = document.getElementById('name');
+      const nameContainer = document.getElementById('name-container');
+      const gameControls = document.getElementById('game-controls');
+
+      let sequence = [];
+      let reversed = "";
+      let currentLevel = 1;
+      let attempt = 1;
+      let correctCount = 0;
+
+      const maxLevels = 5;
+      const attemptsPerLevel = 3;
+      const totalAttempts = maxLevels * attemptsPerLevel;
+
+      async function showSequence() {
+        if (currentLevel > maxLevels) {
+          endGame();
+          return;
+        }
+
         display.textContent = "";
+        answerInput.disabled = true;
+        submitBtn.disabled = true;
+        status.textContent = "";
+
+        sequence = Array.from(
+          { length: 2 + currentLevel },
+          () => Math.floor(Math.random() * 10)
+        );
+        reversed = sequence.slice().reverse().join("");
+
+        for (let num of sequence) {
+          display.classList.remove("blink");
+          await new Promise(res => setTimeout(res, 400));
+          display.textContent = num;
+          display.classList.add("blink");
+          await new Promise(res => setTimeout(res, 800));
+          display.textContent = "";
+        }
+
+        answerInput.disabled = false;
+        submitBtn.disabled = false;
+        answerInput.value = "";
+        answerInput.focus();
       }
 
-      answerInput.disabled = false;
-      submitBtn.disabled = false;
-      answerInput.value = "";
-      answerInput.focus();
-    }
+      function checkAnswer() {
+        const userAnswer = answerInput.value.trim();
 
-    function checkAnswer() {
-      const userAnswer = answerInput.value.trim();
+        if (userAnswer === reversed) {
+          correctCount++;
+          status.textContent = "✅ Правильно!";
+          status.style.color = "lightgreen";
+        } else {
+          status.textContent = `❌ Неправильно. Було: ${reversed}`;
+          status.style.color = "red";
+        }
 
-      if (userAnswer === reversed) {
-        correctCount++;
-        status.textContent = "✅ Правильно!";
-        status.style.color = "lightgreen";
-      } else {
-        status.textContent = `❌ Неправильно. Було: ${reversed}`;
-        status.style.color = "red";
+        attempt++;
+
+        if (attempt > attemptsPerLevel) {
+          currentLevel++;
+          attempt = 1;
+        }
+
+        if (currentLevel > maxLevels) {
+          setTimeout(endGame, 1200);
+          return;
+        }
+
+        status.textContent += `  (${correctCount} з ${totalAttempts} правильних)`;
+        answerInput.value = "";
+
+        setTimeout(showSequence, 1500);
       }
 
-      attempt++;
+      function endGame() {
+        const accuracy = Math.round((correctCount / totalAttempts) * 100);
 
-      if (attempt > attemptsPerLevel) {
-        currentLevel++;
+        display.textContent = "";
+        status.style.color = "white";
+        status.textContent =
+          `Тест завершено. Правильних відповідей: ${correctCount} ` +
+          `з ${totalAttempts} (${accuracy}%).`;
+
+        answerInput.disabled = true;
+        submitBtn.disabled = true;
+        gameControls.style.display = "none";
+
+        sendResult();
+      }
+
+      // НІЯКОГО fetch, ніякого CORS – викликаємо серверну функцію безпосередньо
+      function sendResult() {
+        const name = nameInput.value.trim() || "Без імені";
+
+        google.script.run.saveResult(name, correctCount);
+      }
+
+      startBtn.addEventListener('click', () => {
+        const name = nameInput.value.trim();
+        if (!name) {
+          alert("Будь ласка, введи ім'я перед початком!");
+          return;
+        }
+
+        nameContainer.style.display = "none";
+        gameControls.style.display = "block";
+
+        currentLevel = 1;
         attempt = 1;
-      }
+        correctCount = 0;
 
-      if (currentLevel > maxLevels) {
-        setTimeout(endGame, 1200);
-        return;
-      }
+        showSequence();
+      });
 
-      status.textContent += `  (${correctCount} з ${totalAttempts} правильних)`;
-      answerInput.value = "";
-
-      setTimeout(showSequence, 1500);
-    }
-
-    function endGame() {
-      const accuracy = Math.round((correctCount / totalAttempts) * 100);
-
-      display.textContent = "";
-      status.style.color = "white";
-      status.textContent =
-        `Тест завершено. Правильних відповідей: ${correctCount} ` +
-        `з ${totalAttempts} (${accuracy}%).`;
-
-      answerInput.disabled = true;
-      submitBtn.disabled = true;
-      gameControls.style.display = "none";
-
-      sendResult();
-    }
-
-    // ОНОВЛЕНА функція відправки результату БЕЗ заголовків і з no-cors
-    ffunction sendResult() {
-  const name = nameInput.value.trim() || "Без імені";
-
-  const payload = {
-    name: name,
-    correct: correctCount
-  };
-
-  console.log("Sending:", payload);
-
-  fetch(scriptURL, {
-    method: "POST",
-    mode: "no-cors",      // важливо
-    body: JSON.stringify(payload) // без headers!
-  });
-}
-
-
-
-    startBtn.addEventListener('click', () => {
-      const name = nameInput.value.trim();
-      if (!name) {
-        alert("Будь ласка, введи ім'я перед початком!");
-        return;
-      }
-
-      nameContainer.style.display = "none";
-      gameControls.style.display = "block";
-
-      currentLevel = 1;
-      attempt = 1;
-      correctCount = 0;
-
-      showSequence();
-    });
-
-    submitBtn.addEventListener('click', checkAnswer);
-    answerInput.addEventListener('keypress', (e) => {
-      if (e.key === 'Enter' && !answerInput.disabled) checkAnswer();
-    });
-  </script>
-</body>
+      submitBtn.addEventListener('click', checkAnswer);
+      answerInput.addEventListener('keypress', (e) => {
+        if (e.key === 'Enter' && !answerInput.disabled) checkAnswer();
+      });
+    </script>
+  </body>
 </html>
-
